live/lab/opencve/8-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: opencve-webserver
  # namespace: itsystems-dev
spec:
  ingressClassName: nginx
  rules:
  - host: opencve-dev.medimpact.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opencve-webserver
            port:
              number: 8000
  tls:
  - hosts:
    - opencve-dev.medimpact.com
